--- a/templates/exo_2.html
+++ b/templates/exo_2.html
@@ -1,1 +1,34 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TP HTML</title>
+<style>
+        table {
+            border-collapse: collapse;
+            width: 50%;
+            margin: 20px auto;
+            text-align: center;
+        }
+        th, td {
+            border: 2px solid black;
+            padding: 10px;
+        }
+    </style>
+</head>
+<body>
+<table>
+        <tr>
+            <th>un tableau</th>
+            <th></th>
+            <th></th>
+        </tr>
+        <tr>
+            <td></td>
+            <td>a 6</td>
+            <td></td>
+        </tr>
+    </table>
+</body>
+</html>
