--- a/templates/exo_2.html
+++ b/templates/exo_2.html
@@ -27,7 +27,7 @@
         <tr>
             <td></td>
             <td>a 6</td>
-            <td></td>
+            <td>cases</td>
         </tr>
     </table>
 </body>
