--- a/templates/exo_2.html
+++ b/templates/exo_2.html
@@ -18,6 +18,8 @@
 </style>
 </head>
 <body>
+<dir>
+    <h6>Voici la première partie :</h6>
 <table>
         <tr>
             <th>un tableau</th>
@@ -30,5 +32,29 @@
             <td>cases</td>
         </tr>
     </table>
+</dir>
+    <dir>
+        <h6><i>Voici la deuxième partie :</i></h6>
+        <p color="red">Une liste</p>
+        <ol>
+            
+        </ol>
+    </dir>
+    <dir>
+        <h6><b>Voici la deuxième partie :</b></h6>
+        <table>
+        <tr>
+            <th>un autre tableau</th>
+            <th></th>
+            <th></th>
+            <th></th>
+        </tr>
+        <tr>
+            <td></td>
+            <td>a 6</td>
+            <td>cases</td>
+        </tr>
+    </table>
+    </dir>
 </body>
 </html>
