--- a/templates/Jeu_Des_Base.html
+++ b/templates/Jeu_Des_Base.html
@@ -16,6 +16,22 @@
                     document.getElementById('C1').style.display = 'block';
                     document.getElementById('C7').style.display = 'block';
                     break;
+        case 3 :
+                    document.getElementById('C1').style.display = 'block';
+                    document.getElementById('C7').style.display = 'block';
+                    break;
+        case 4 :
+                    document.getElementById('C1').style.display = 'block';
+                    document.getElementById('C7').style.display = 'block';
+                    break;
+        case 5 :
+                    document.getElementById('C1').style.display = 'block';
+                    document.getElementById('C7').style.display = 'block';
+                    break;
+        case 6 :
+                    document.getElementById('C1').style.display = 'block';
+                    document.getElementById('C7').style.display = 'block';
+                    break;
         }
         
       }
@@ -26,8 +42,12 @@
      <svg width="300px" height="300px" style="background-color:lightgray">
     
    <circle id="C1" cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" style="display:none"/>
+   <circle id="C2" cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" style="display:none"/>
+   <circle id="C3" cx="150" cy="150" r="40" stroke="black" stroke-width="3" fill="red" style="display:none"/>
    <circle id="C4" cx="150" cy="150" r="40" stroke="black" stroke-width="3" fill="red" style="display:none"/>
-  <circle id="C7" cx="250" cy="250" r="40" stroke="black" stroke-width="3" fill="red" style="display:none"/>
+   <circle id="C5" cx="100" cy="100" r="40" stroke="black" stroke-width="3" fill="red" style="display:none"/>
+   <circle id="C6" cx="150" cy="150" r="40" stroke="black" stroke-width="3" fill="red" style="display:none"/>
+   <circle id="C7" cx="250" cy="250" r="40" stroke="black" stroke-width="3" fill="red" style="display:none"/>
 
   </svg> 
 </body>
