--- a/templates/afficher_img.html
+++ b/templates/afficher_img.html
@@ -27,9 +27,9 @@ function afficher3(){
 <body>
 <h2>Images à afficher :</h2>
 <hr/>
-<p>Image 1<input type="img1" id="afficher1"></p><br>
-<p>Image 1<input type="img2" id="afficher2"></p><br>
-<p>Image 1<input type="img3" id="afficher3"></p><br>
+<p>Image 1<input type="checkbox" id="img1"></p>
+<p>Image 2<input type="checkbox" id="img2"></p
+<p>Image 3<input type="checkbox" id="img3"></p
 <button onclick="afficher()">Afficher</button>
 <img src="{{ url_for('static', filename='image/img1.png') }}" alt="Logo">
 <img src="{{ url_for('static', filename='image/img2.png') }}" alt="Logo">
