--- a/templates/afficher_img.html
+++ b/templates/afficher_img.html
@@ -5,23 +5,16 @@ document.getElementById('img1').style.display="None";
 document.getElementById('img2').style.display="None";
 document.getElementById('img3').style.display="None";
 
-function controler(){
-	if(document.getElementById('Control').checked){
-			alert("Bouton option coché");
-		}
-	else{alert("Bouton option NON coché");}
+function afficher(){
+	if(document.getElementById('img1').checked){
+		document.getElementById('img1').style.display="Block";
 }
-
-function afficher1(){
-      document.getElementById('img1').style.display="Block";
+	else if(document.getElementById('img2').checked){
+		document.getElementById('img2').style.display="Block";
 }
-function afficher2(){
-      document.getElementById('img2').style.display="Block";
+	else if(document.getElementById('img3').checked){
+		document.getElementById('img3').style.display="Block";
 }
-function afficher3(){
-      document.getElementById('img3').style.display="BLock";
-}
-
 </script>
 </head>
 <body>
@@ -31,9 +24,11 @@ function afficher3(){
 <p>Image 2<input type="checkbox" id="img2"></p
 <p>Image 3<input type="checkbox" id="img3"></p
 <button onclick="afficher()">Afficher</button>
+	
+<div>
 <img src="{{ url_for('static', filename='image/img1.png') }}" alt="Logo">
 <img src="{{ url_for('static', filename='image/img2.png') }}" alt="Logo">
 <img src="{{ url_for('static', filename='image/img3.png') }}" alt="Logo">
-
+</div>
 </body>
 </html>
