--- a/templates/afficher_img.html
+++ b/templates/afficher_img.html
@@ -1,10 +1,11 @@
 <html>
 <head>
 <script>
+window.onload = function() {
 document.getElementById('img1').style.display="None";
 document.getElementById('img2').style.display="None";
 document.getElementById('img3').style.display="None";
-
+}
 function afficher(){
 	if(document.getElementById('img1').checked){
 		document.getElementById('img1').style.display="Block";
