--- a/templates/afficher_img.html
+++ b/templates/afficher_img.html
@@ -22,8 +22,8 @@ function afficher(){
 <h2>Images à afficher :</h2>
 <hr/>
 <p>Image 1<input type="checkbox" id="img1"></p>
-<p>Image 2<input type="checkbox" id="img2"></p
-<p>Image 3<input type="checkbox" id="img3"></p
+<p>Image 2<input type="checkbox" id="img2"></p>
+<p>Image 3<input type="checkbox" id="img3"></p>
 <button onclick="afficher()">Afficher</button>
 	
 <div>
