--- a/templates/afficher_img.html
+++ b/templates/afficher_img.html
@@ -1,5 +1,21 @@
 <html>
 <head>
+<meta charset="utf-8">
+</head>
+<body>
+<h2>Images à afficher :</h2>
+<hr/>
+<p>Image 1<input type="checkbox" id="img1"></p>
+<p>Image 2<input type="checkbox" id="img2"></p>
+<p>Image 3<input type="checkbox" id="img3"></p>
+<button onclick="afficher()">Afficher</button>
+	
+<div>
+<img src="{{ url_for('static', filename='image/img1.png') }}" alt="Logo">
+<img src="{{ url_for('static', filename='image/img2.png') }}" alt="Logo">
+<img src="{{ url_for('static', filename='image/img3.png') }}" alt="Logo">
+</div>
+
 <script>
 window.onload = function() {
 document.getElementById('img1').style.display="None";
@@ -17,19 +33,5 @@ function afficher(){
 		document.getElementById('img3').style.display="Block";
 }
 </script>
-</head>
-<body>
-<h2>Images à afficher :</h2>
-<hr/>
-<p>Image 1<input type="checkbox" id="img1"></p>
-<p>Image 2<input type="checkbox" id="img2"></p>
-<p>Image 3<input type="checkbox" id="img3"></p>
-<button onclick="afficher()">Afficher</button>
-	
-<div>
-<img src="{{ url_for('static', filename='image/img1.png') }}" alt="Logo">
-<img src="{{ url_for('static', filename='image/img2.png') }}" alt="Logo">
-<img src="{{ url_for('static', filename='image/img3.png') }}" alt="Logo">
-</div>
 </body>
 </html>
