--- a/templates/afficher_img.html
+++ b/templates/afficher_img.html
@@ -8,7 +8,7 @@
 <p>Image 1<input type="checkbox" id="img1"></p>
 <p>Image 2<input type="checkbox" id="img2"></p>
 <p>Image 3<input type="checkbox" id="img3"></p>
-<button onclick="afficher()">Afficher</button>
+<button onclick="afficher()"><p></p>Afficher</p></button>
 	
 <div>
 <img src="{{ url_for('static', filename='image/img1.png') }}" alt="Logo">
