--- a/templates/afficher_img.html
+++ b/templates/afficher_img.html
@@ -8,12 +8,12 @@
 <p>Image 1<input type="checkbox" id="img1"></p>
 <p>Image 2<input type="checkbox" id="img2"></p>
 <p>Image 3<input type="checkbox" id="img3"></p>
-<button onclick="afficher()"><p></p>Afficher</p></button>
+<button onclick="afficher()">Afficher</button>
 	
 <div>
-<img src="{{ url_for('static', filename='image/img1.png') }}" alt="Logo">
-<img src="{{ url_for('static', filename='image/img2.png') }}" alt="Logo">
-<img src="{{ url_for('static', filename='image/img3.png') }}" alt="Logo">
+<img src="{{ url_for('static', filename='image/img1.png') }}" alt="Logo1">
+<img src="{{ url_for('static', filename='image/img2.png') }}" alt="Logo2">
+<img src="{{ url_for('static', filename='image/img3.png') }}" alt="Logo3">
 </div>
 
 <script>
