--- a/templates/russian_roulette.html
+++ b/templates/russian_roulette.html
@@ -6,8 +6,10 @@ function lancer(){
           alert("le barillet tourne");
 }
 
-function displayChamber(n){
+function chamber(n){
+	document.getElementById("Br${n}").style.fill="red";
 	alert("Chambre" + n)
+	
 }
 </script>
 
@@ -18,12 +20,12 @@ function displayChamber(n){
 
 	<svg width=200 height=200 style="background-color:antiquewhite">
 	<circle cx="100" cy="100" r="95" stroke="black" stroke-width="3" fill="none" />
-	<circle id="Br1" cx="100" cy="40" r="25" stroke="black" stroke-width="3" fill="gray" onclick="displayChamber(1)" />
-	<circle id="Br2" cx="150" cy="70" r="25" stroke="black" stroke-width="3" fill="gray" onclick="displayChamber(2)"/>
-	<circle id="Br3" cx="50" cy="70" r="25" stroke="black" stroke-width="3" fill="gray" onclick="displayChamber(3)" />
-	<circle id="Br4" cx="50" cy="130" r="25" stroke="black" stroke-width="3" fill="gray" onclick="displayChamber(4)"/>
-	<circle id="Br5" cx="150" cy="130" r="25" stroke="black" stroke-width="3" fill="gray" onclick="displayChamber(5)"/>
-	<circle id="Br6" cx="100" cy="160" r="25" stroke="black" stroke-width="3" fill="gray" onclick="displayChamber(6)"/>
+	<circle id="Br1" cx="100" cy="40" r="25" stroke="black" stroke-width="3" fill="gray" onclick="chamber(1)" />
+	<circle id="Br2" cx="150" cy="70" r="25" stroke="black" stroke-width="3" fill="gray" onclick="chamber(2)"/>
+	<circle id="Br3" cx="50" cy="70" r="25" stroke="black" stroke-width="3" fill="gray" onclick="chamber(3)" />
+	<circle id="Br4" cx="50" cy="130" r="25" stroke="black" stroke-width="3" fill="gray" onclick="chamber(4)"/>
+	<circle id="Br5" cx="150" cy="130" r="25" stroke="black" stroke-width="3" fill="gray" onclick="chamber(5)"/>
+	<circle id="Br6" cx="100" cy="160" r="25" stroke="black" stroke-width="3" fill="gray" onclick="chamber(6)"/>
 	<circle cx="100" cy="100" r="10" stroke="black" stroke-width="3" fill="black" />
 	</svg>	
 	
