--- a/templates/russian_roulette.html
+++ b/templates/russian_roulette.html
@@ -7,7 +7,7 @@ function lancer(){
 }
 
 function chamber(n){
-	document.getElementById("Br${n}").style.fill="red";
+	document.getElementById('Br${n}').style.fill="red";
 	alert("Chambre" + n)
 	
 }
