--- a/templates/russian_roulette.html
+++ b/templates/russian_roulette.html
@@ -7,9 +7,8 @@ function lancer(){
 }
 
 function chamber(n){
-	document.getElementById('Br${n}').style.fill="red";
+	document.getElementById("Br"+n).style.fill="red";
 	alert("Chambre" + n)
-	
 }
 </script>
 
