--- a/templates/russian_roulette.html
+++ b/templates/russian_roulette.html
@@ -15,7 +15,9 @@ function lancer(){
 
 function chamber(n){
 	alert("Chambre" + n)
+setTimeout(() => { 
 	document.getElementById("Br"+n).style.fill="red";
+}, 100);
 }
 </script>
 
