--- a/templates/russian_roulette.html
+++ b/templates/russian_roulette.html
@@ -1,16 +1,18 @@
 </html>
 <head>
 <script>
-document.addEventListener("click", () => document.getElementById("Br1").style.fill = "grey");
-document.addEventListener("click", () => document.getElementById("Br2").style.fill = "grey");
-document.addEventListener("click", () => document.getElementById("Br3").style.fill = "grey");
-document.addEventListener("click", () => document.getElementById("Br4").style.fill = "grey");
-document.addEventListener("click", () => document.getElementById("Br5").style.fill = "grey");
-document.addEventListener("click", () => document.getElementById("Br6").style.fill = "grey");
+//document.addEventListener("click", () => document.getElementById("Br1").style.fill = "grey");
+//document.addEventListener("click", () => document.getElementById("Br2").style.fill = "grey");
+//document.addEventListener("click", () => document.getElementById("Br3").style.fill = "grey");
+//document.addEventListener("click", () => document.getElementById("Br4").style.fill = "grey");
+//document.addEventListener("click", () => document.getElementById("Br5").style.fill = "grey");
+//document.addEventListener("click", () => document.getElementById("Br6").style.fill = "grey");
 
 function lancer(){
 	   var number = Math.floor((Math.random() * 6)+1);
           alert("le barillet tourne..... BAM !! le numéro " + number);
+	if(document.getElementById("Br"+Val).style.fill=="red"){alert("Perdu");}
+	else{alert("Gagné");}
 }
 
 function chamber(n){
