--- a/templates/russian_roulette.html
+++ b/templates/russian_roulette.html
@@ -11,7 +11,7 @@
 function lancer(){
 	   var number = Math.floor((Math.random() * 6)+1);
           alert("le barillet tourne..... BAM !! le numéro " + number);
-	if(document.getElementById("Br"+Val).style.fill=="red"){alert("Perdu");}
+	if(document.getElementById("Br"+number).style.fill=="red"){alert("Perdu");}
 	else{alert("Gagné");}
 }
 
